server/.antlr/BosParser.java
// Generated from d:/BAR/AntlrGrammarBos/bos-language-support/server/Bos.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, D_DEFINE=4, D_INCLUDE=5, D_UNDEF=6, D_IFDEF=7, 
		D_IFNDEF=8, D_ENDIF=9, D_IF=10, D_ELSE=11, MOVE=12, TURN=13, SPIN=14, 
		STOP_SPIN=15, SHOW=16, HIDE=17, CACHE=18, DONT_CACHE=19, DONT_SHADOW=20, 
		DONT_SHADE=21, EMIT_SFX=22, SLEEP=23, WAIT_FOR_TURN=24, WAIT_FOR_MOVE=25, 
		EXPLODE=26, SET=27, ATTACH_UNIT=28, DROP_UNIT=29, RETURN=30, RAND=31, 
		GET=32, START_SCRIPT=33, CALL_SCRIPT=34, TO=35, SPEED=36, NOW=37, AROUND=38, 
		ALONG=39, TYPE=40, FROM=41, IF=42, ELSE=43, WHILE=44, FOR=45, TRUE=46, 
		FALSE=47, UNKNOWN_UNIT_VALUE=48, ACCELERATE=49, DECELERATE=50, PIECE=51, 
		STATIC_VAR=52, VAR=53, PLAY_SOUND=54, SIGNAL=55, SET_SIGNAL_MASK=56, PLUS=57, 
		MINUS=58, MULTIPLY=59, DIVIDE=60, MODULO=61, EQUAL=62, DOUBLE_EQUAL=63, 
		NOT_EQUAL=64, LESS_THAN=65, LESS_EQUAL=66, GREATER_THAN=67, GREATER_EQUAL=68, 
		LOGICAL_AND=69, LOGICAL_OR=70, LOGICAL_NOT=71, LOGICAL_XOR=72, BITWISE_AND=73, 
		BITWISE_OR=74, BITWISE_XOR=75, LPAREN=76, RPAREN=77, LBRACE=78, RBRACE=79, 
		LBRACKET=80, RBRACKET=81, COMMA=82, SEMICOLON=83, MULTI_LINE_MACRO=84, 
		DIRECTIVE=85, WHITESPACE=86, NEWLINE=87, LINE_COMMENT=88, BLOCK_COMMENT=89, 
		INTEGER_CONSTANT=90, FLOAT_CONSTANT=91, IDENTIFIER=92, STRING=93;
	public static final int
		RULE_preprocessor = 0, RULE_file = 1, RULE_declaration = 2, RULE_pieceDec = 3, 
		RULE_staticVarDec = 4, RULE_funcDec = 5, RULE_arguments = 6, RULE_statementBlock = 7, 
		RULE_statement = 8, RULE_assignStatement = 9, RULE_definedVarStatement = 10, 
		RULE_incrementStatement = 11, RULE_decrementStatement = 12, RULE_ifStatement = 13, 
		RULE_whileStatement = 14, RULE_forStatement = 15, RULE_varStatement = 16, 
		RULE_keywordStatement = 17, RULE_callStatement = 18, RULE_startStatement = 19, 
		RULE_spinStatement = 20, RULE_optionalAcceleration = 21, RULE_stopSpinStatement = 22, 
		RULE_optionalDeceleration = 23, RULE_turnStatement = 24, RULE_moveStatement = 25, 
		RULE_speedNow = 26, RULE_waitForTurnStatement = 27, RULE_waitForMoveStatement = 28, 
		RULE_emitSfxStatement = 29, RULE_sleepStatement = 30, RULE_hideStatement = 31, 
		RULE_showStatement = 32, RULE_explodeStatement = 33, RULE_signalStatement = 34, 
		RULE_setSignalMaskStatement = 35, RULE_setStatement = 36, RULE_getStatement = 37, 
		RULE_attachUnitStatement = 38, RULE_dropUnitStatement = 39, RULE_returnStatement = 40, 
		RULE_playSoundStatement = 41, RULE_cacheStatement = 42, RULE_dontCacheStatement = 43, 
		RULE_dontShadowStatement = 44, RULE_dontShadeStatement = 45, RULE_expression = 46, 
		RULE_term = 47, RULE_constant = 48, RULE_globalConstant = 49, RULE_unaryOp = 50, 
		RULE_funcCall = 51, RULE_randCall = 52, RULE_commaExpression = 53, RULE_getTerm = 54, 
		RULE_op = 55, RULE_expressionList = 56, RULE_varName = 57, RULE_pieceName = 58, 
		RULE_funcName = 59, RULE_axis = 60, RULE_signedIntegerConstant = 61, RULE_signedFloatConstant = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"preprocessor", "file", "declaration", "pieceDec", "staticVarDec", "funcDec", 
			"arguments", "statementBlock", "statement", "assignStatement", "definedVarStatement", 
			"incrementStatement", "decrementStatement", "ifStatement", "whileStatement", 
			"forStatement", "varStatement", "keywordStatement", "callStatement", 
			"startStatement", "spinStatement", "optionalAcceleration", "stopSpinStatement", 
			"optionalDeceleration", "turnStatement", "moveStatement", "speedNow", 
			"waitForTurnStatement", "waitForMoveStatement", "emitSfxStatement", "sleepStatement", 
			"hideStatement", "showStatement", "explodeStatement", "signalStatement", 
			"setSignalMaskStatement", "setStatement", "getStatement", "attachUnitStatement", 
			"dropUnitStatement", "returnStatement", "playSoundStatement", "cacheStatement", 
			"dontCacheStatement", "dontShadowStatement", "dontShadeStatement", "expression", 
			"term", "constant", "globalConstant", "unaryOp", "funcCall", "randCall", 
			"commaExpression", "getTerm", "op", "expressionList", "varName", "pieceName", 
			"funcName", "axis", "signedIntegerConstant", "signedFloatConstant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'x-axis'", "'y-axis'", "'z-axis'", "'#define'", "'#include'", 
			"'#undef'", "'#ifdef'", "'#ifndef'", "'#endif'", "'#if'", "'#else'", 
			"'move'", "'turn'", "'spin'", "'stop-spin'", "'show'", "'hide'", "'cache'", 
			"'dont-cache'", "'dont-shadow'", "'dont-shade'", "'emit-sfx'", "'sleep'", 
			"'wait-for-turn'", "'wait-for-move'", "'explode'", "'set'", "'attach-unit'", 
			"'drop-unit'", "'return'", "'rand'", null, "'start-script'", "'call-script'", 
			"'to'", "'speed'", "'now'", "'around'", "'along'", "'type'", "'from'", 
			"'if'", "'else'", "'while'", "'for'", "'TRUE'", "'FALSE'", "'UNKNOWN_UNIT_VALUE'", 
			"'accelerate'", "'decelerate'", "'piece'", "'static-var'", "'var'", "'play-sound'", 
			"'signal'", "'set-signal-mask'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
			"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", null, null, null, null, 
			"'&'", "'|'", "'^'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "D_DEFINE", "D_INCLUDE", "D_UNDEF", "D_IFDEF", 
			"D_IFNDEF", "D_ENDIF", "D_IF", "D_ELSE", "MOVE", "TURN", "SPIN", "STOP_SPIN", 
			"SHOW", "HIDE", "CACHE", "DONT_CACHE", "DONT_SHADOW", "DONT_SHADE", "EMIT_SFX", 
			"SLEEP", "WAIT_FOR_TURN", "WAIT_FOR_MOVE", "EXPLODE", "SET", "ATTACH_UNIT", 
			"DROP_UNIT", "RETURN", "RAND", "GET", "START_SCRIPT", "CALL_SCRIPT", 
			"TO", "SPEED", "NOW", "AROUND", "ALONG", "TYPE", "FROM", "IF", "ELSE", 
			"WHILE", "FOR", "TRUE", "FALSE", "UNKNOWN_UNIT_VALUE", "ACCELERATE", 
			"DECELERATE", "PIECE", "STATIC_VAR", "VAR", "PLAY_SOUND", "SIGNAL", "SET_SIGNAL_MASK", 
			"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "EQUAL", "DOUBLE_EQUAL", 
			"NOT_EQUAL", "LESS_THAN", "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", 
			"LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", "LOGICAL_XOR", "BITWISE_AND", 
			"BITWISE_OR", "BITWISE_XOR", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", "MULTI_LINE_MACRO", "DIRECTIVE", 
			"WHITESPACE", "NEWLINE", "LINE_COMMENT", "BLOCK_COMMENT", "INTEGER_CONSTANT", 
			"FLOAT_CONSTANT", "IDENTIFIER", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bos.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreprocessorContext extends ParserRuleContext {
		public TerminalNode D_DEFINE() { return getToken(BosParser.D_DEFINE, 0); }
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(BosParser.IDENTIFIER, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode STRING() { return getToken(BosParser.STRING, 0); }
		public TerminalNode D_INCLUDE() { return getToken(BosParser.D_INCLUDE, 0); }
		public TerminalNode D_UNDEF() { return getToken(BosParser.D_UNDEF, 0); }
		public TerminalNode D_IFDEF() { return getToken(BosParser.D_IFDEF, 0); }
		public TerminalNode D_IFNDEF() { return getToken(BosParser.D_IFNDEF, 0); }
		public TerminalNode D_IF() { return getToken(BosParser.D_IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode D_ELSE() { return getToken(BosParser.D_ELSE, 0); }
		public TerminalNode D_ENDIF() { return getToken(BosParser.D_ENDIF, 0); }
		public PreprocessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessor; }
	}

	public final PreprocessorContext preprocessor() throws RecognitionException {
		PreprocessorContext _localctx = new PreprocessorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_preprocessor);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case D_DEFINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(D_DEFINE);
				setState(127);
				varName();
				setState(131);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(128);
					match(IDENTIFIER);
					}
					break;
				case 2:
					{
					setState(129);
					constant();
					}
					break;
				case 3:
					{
					setState(130);
					match(STRING);
					}
					break;
				}
				}
				break;
			case D_INCLUDE:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(D_INCLUDE);
				setState(134);
				match(STRING);
				}
				break;
			case D_UNDEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(D_UNDEF);
				setState(136);
				varName();
				}
				break;
			case D_IFDEF:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				match(D_IFDEF);
				setState(138);
				varName();
				}
				break;
			case D_IFNDEF:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				match(D_IFNDEF);
				setState(140);
				varName();
				}
				break;
			case D_IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				match(D_IF);
				setState(142);
				expression();
				}
				break;
			case D_ELSE:
				enterOuterAlt(_localctx, 7);
				{
				setState(143);
				match(D_ELSE);
				}
				break;
			case D_ENDIF:
				enterOuterAlt(_localctx, 8);
				{
				setState(144);
				match(D_ENDIF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public List<PreprocessorContext> preprocessor() {
			return getRuleContexts(PreprocessorContext.class);
		}
		public PreprocessorContext preprocessor(int i) {
			return getRuleContext(PreprocessorContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6755399441059824L) != 0) || _la==IDENTIFIER) {
				{
				setState(149);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case D_DEFINE:
				case D_INCLUDE:
				case D_UNDEF:
				case D_IFDEF:
				case D_IFNDEF:
				case D_ENDIF:
				case D_IF:
				case D_ELSE:
					{
					setState(147);
					preprocessor();
					}
					break;
				case PIECE:
				case STATIC_VAR:
				case IDENTIFIER:
					{
					setState(148);
					declaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public PieceDecContext pieceDec() {
			return getRuleContext(PieceDecContext.class,0);
		}
		public StaticVarDecContext staticVarDec() {
			return getRuleContext(StaticVarDecContext.class,0);
		}
		public FuncDecContext funcDec() {
			return getRuleContext(FuncDecContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PIECE:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				pieceDec();
				}
				break;
			case STATIC_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				staticVarDec();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				funcDec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PieceDecContext extends ParserRuleContext {
		public TerminalNode PIECE() { return getToken(BosParser.PIECE, 0); }
		public List<PieceNameContext> pieceName() {
			return getRuleContexts(PieceNameContext.class);
		}
		public PieceNameContext pieceName(int i) {
			return getRuleContext(PieceNameContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(BosParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BosParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BosParser.COMMA, i);
		}
		public PieceDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pieceDec; }
	}

	public final PieceDecContext pieceDec() throws RecognitionException {
		PieceDecContext _localctx = new PieceDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pieceDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(PIECE);
			setState(160);
			pieceName();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(161);
				match(COMMA);
				setState(162);
				pieceName();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StaticVarDecContext extends ParserRuleContext {
		public TerminalNode STATIC_VAR() { return getToken(BosParser.STATIC_VAR, 0); }
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(BosParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BosParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BosParser.COMMA, i);
		}
		public StaticVarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staticVarDec; }
	}

	public final StaticVarDecContext staticVarDec() throws RecognitionException {
		StaticVarDecContext _localctx = new StaticVarDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_staticVarDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(STATIC_VAR);
			setState(171);
			varName();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(172);
				match(COMMA);
				setState(173);
				varName();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDecContext extends ParserRuleContext {
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(BosParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BosParser.RPAREN, 0); }
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public FuncDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDec; }
	}

	public final FuncDecContext funcDec() throws RecognitionException {
		FuncDecContext _localctx = new FuncDecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			funcName();
			setState(182);
			match(LPAREN);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(183);
				arguments();
				}
			}

			setState(186);
			match(RPAREN);
			setState(187);
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BosParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BosParser.COMMA, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			varName();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(190);
				match(COMMA);
				setState(191);
				varName();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementBlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(BosParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(BosParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
	}
